# minimax

./: .gitignore  CONTRIBUTING.md  README.md  launcher.sh  pyproject.toml  setup.cfg
config/configs/maze/: accel.json  paccel.json  paired.json  pplr.json  s5_plr.json
docs/: evaluate_args.md  make_cmd.md  parsnip.md  train_args.md
docs/envs/: maze.md
examples/: dr.ipynb  paired.ipynb  plr.ipynb
src/: plr.py
src/minimax/: __init__.py  arguments.py  evaluate.py  train.py
src/minimax/agents/: __init__.py  agent.py  ppo.py
src/minimax/config/: make_cmd.py  xpid_maker.py
src/minimax/envs/: __init__.py  batch_env.py  batch_env_ued.py  environment.py  environment_ued.py  registration.py  spaces.py
src/minimax/envs/interactive/: manual_ctrl_maze.py
src/minimax/envs/maze/: __init__.py  common.py  maze.py  maze_comparators.py  maze_mutators.py  maze_ood.py  maze_ued.py
src/minimax/envs/mountainCar/: mountain_car.py
src/minimax/envs/viz/: grid_rendering.py  grid_viz.py  window.py
src/minimax/envs/wrappers/: __init__.py  env_wrapper.py  monitor_ep_metrics.py  monitor_return.py  ued_env_wrapper.py
src/minimax/models/: __init__.py  common.py  registration.py  rnn.py  s5.py
src/minimax/models/maze/: __init__.py  gridworld_models.py
src/minimax/runners/: __init__.py  dr_runner.py  eval_runner.py  paired_runner.py  plr_runner.py  xp_runner.py
src/minimax/tests/: base_req_rollout_storage.py  dummy_test_envs.py  test_rollout_storage.py  test_ued_scores.py  test_wrappers.py
src/minimax/util/: __init__.py  args.py  checkpoint.py  dotdict.py  graph.py  loggers.py  parsnip.py  pytree.py
src/minimax/util/rl/: __init__.py  agent_pop.py  plr.py  rolling_stats.py  rollout_storage.py  (+2 more)
(+12 files in other folders)
